# Watershed

./: .gitignore  .swarm-state.md  AGENTS.md  ASSET_WORKFLOW.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_HEALTH_GUIDE.md  IMPROVEMENT_PLAN.md  INVESTIGATION_SUMMARY.md  PHYSICS_CONSTANTS.md  PLAN.md  README.md  STARTUP_DIAGNOSTICS.md  SYSTEMS.md  TESTING.md  WASM.md  build_and_patch.py  capture_with_delay.js  check_player_pos.js  deploy.py  deploy_old.py  diagnose.js  diagnose.py  index.html  inspect_bg_after_start.js  inspect_canvas.js  inspect_errors.js  inspect_ingame.js  inspect_ingame.json  inspect_ingame2.js  inspect_overlays2.js  inspect_renderer.js  inspect_renderer2.js  inspect_scene.js  inspect_three.js  kimi_prompt.md  manual_camera.js  package.json  plan-dec-25.md  plan.md  (+66 more)
.Jules/: palette.md
.github/workflows/: build.yml
.playwright-mcp/: page-2026-04-16T07-55-15-957Z.yml  page-2026-04-16T07-59-01-983Z.yml  page-2026-04-16T08-07-44-921Z.yml  page-2026-04-16T08-07-59-058Z.yml  page-2026-04-16T08-11-57-008Z.yml  page-2026-05-20T04-13-51-706Z.yml  page-2026-05-20T04-16-27-502Z.yml  page-2026-06-05T21-42-53-752Z.yml  page-2026-06-05T21-45-27-778Z.yml  page-2026-06-05T21-48-52-951Z.yml  page-2026-06-05T22-18-13-740Z.yml  page-2026-06-05T22-25-23-246Z.yml
assembly/: index.ts
assets/concepts/: concepts.md
concepts/: concepts.md
docs/: DOCUMENTATION_INDEX.md  QUICK_TROUBLESHOOTING.md  README.md  RENDERER.md  RENDERER_CONTRACT.md  TESTING.md  VISUAL_ENHANCEMENT_SUMMARY.md  plan.md
docs/archive/: LEVEL_AUTHORING_SUMMARY.md  plan-dec-25.md
docs/reference/: ADR_WASM_RAPIER_WATER_FORCES.md  CODE_HEALTH_GUIDE.md  DOCUMENTATION_INDEX.md  MAPSYSTEM_STEP5_CONTRACT.md  PHYSICS_CONSTANTS.md  QUICK_TROUBLESHOOTING.md  RENDERER.md  STARTUP_DIAGNOSTICS.md  TESTING.md  WASM_WATER_FORCES.md  plan.md  river_plan.md
emscripten/: CMakeLists.txt  build.sh  build_colab.sh  main.cpp  smoke_test.mjs
notes/: README.md  grok.md
public/: index.html  test.html  watershed_native.js  watershed_native.wasm
public/levels/: autumn-rapids.json  devils-gorge.json  gentle-creek.json
public/shaders/: heightmap_flow.wgsl
scripts/: validate-markdown-paths.js
src/: App.tsx  Editor.tsx  Experience.jsx  Experience.tsx  GAMEHUD_INTEGRATION.jsx  LEVEL_DESIGN.md  PLAN.md  RAFT_INTEGRATION_GUIDE.jsx  RAFT_VORTEX_INTEGRATION.jsx  index.tsx  setupTests.ts  style.css  verify_visuals.py  vite-env.d.ts
src/__tests__/: App.test.tsx  Experience.test.tsx  README.md  gameStore.test.ts
src/biomes/: CanyonBiome.tsx
src/components/: AudioDiagnosticsOverlay.tsx  CanyonDecorations.jsx  CollisionParticles.tsx  CreekCanyon.jsx  DebugPanel.tsx  EnhancedSky.jsx  ErrorBoundary.tsx  FlowForecast.tsx  FlowingWater.jsx  FlowingWater.test.tsx  ForecastHUD.tsx  GameHUD.tsx  GhostReplayer.tsx  InstancedRiverProps.tsx  Loader.test.tsx  Loader.tsx  LumberProps.tsx  PLAN.md  PauseMenu.tsx  PhysicsDebugOverlay.tsx  Player.jsx  Player.tsx  PooledObstacles.jsx  PostProcessingEffects.jsx  PostProcessingEffects.tsx  PostProcessingPipeline.jsx  README.md  Raft.jsx  ReactiveAudio.test.tsx  ReactiveAudio.tsx  RiverTrack.jsx  ShaderBrowserPanel.tsx  StartMenu.tsx  TrackManager.jsx  TrackManager.test.tsx  TrackManager.tsx  TrackSegment.jsx  TreeSystem.jsx  UI.test.tsx  UI.tsx  (+12 more)
src/configs/: BiomePalettes.ts  TrackBiomes.ts  biomes.ts
src/constants/: audioConfig.ts  biomes.ts  game.ts  nightMode.ts  vehicleTuning.ts  waterFlow.ts  weather.ts
src/debug/: PerfCheckpointMonitor.tsx  debugStages.test.tsx  debugStages.ts  perfMetrics.ts
src/experience/: ExperienceUI.tsx  HeadlessSkySphere.tsx  InnerExperience.tsx  SceneLighting.tsx  VehicleMount.tsx  WaterStack.tsx  constants.ts  lightingConfig.ts  types.ts
src/formats/: LevelFormat.md  README.md  level.schema.json  persistence.schema.json  reach.schema.json
src/hooks/: index.ts  useCameraShake.ts  useChunkLoader.ts  useLevel.ts  useLevelEditor.ts  useNightMode.ts  usePlayerControls.ts  useRiverAudio.ts  useSegmentAudio.ts  useShaderBrowser.ts  useShaderLoader.ts  useVortexForce.ts  useWaterFlowField.ts
src/maps/: campaign.test.ts  campaign.ts  delta_rapids.json  glacial_source.json  glacial_source.ts  lumber_flume.json  lumber_flume.ts  meander_to_waterfall.json  meander_to_waterfall.ts  registry.test.ts  (+1 more)
verification/: _deploy_full_probe.cjs  boot_recover.mjs  diag_classify.mjs  diag_console.mjs  diag_player_pos.mjs  diag_reset.mjs  diag_trace.mjs  diag_trials.mjs  diagnose.py  lumber_flume_smoke.mjs  screenshot.mjs  tracksegment_pageerrors.mjs  verify.py  verify_dragonflies.py  verify_leaves.py  verify_leaves_debug.py  verify_moss.py  verify_pause.py  verify_pebbles.py  verify_pinecones.py  verify_player.py  verify_rapids.py  verify_rapids_v2.py  verify_rock_foam.py  verify_ui.py  verify_ux.py  verify_visuals.py  verify_visuals_playwright.py  visual_smoke.mjs  webgl_capture.py  webgl_screenshots.mjs
(+223 files in other folders)
